-----------
-- 2.4.5 --
-----------

* Frontend:
	* new languages (zh-hans/zh-hant) are now correctly handled.
	  Fixes #770810

-----------
-- 2.4.4 --
-----------

* Frontend:
	* Fixed usage message in uck-remaster to match the parameter handling
	  that was already implemented.
	* Start message now contains output of uname and lsb_release. This
	  should help to better diagnose problems.
	* customize script now outputs kernel and lsb_release info. This
	  should help to better diagnose problems,
	* uck-gui now gives proper usage message and outputs uname and
	  lsb_release information.
	* uck-gui now passes REMASTER_HOME to uck-remaster. Necessary for
	  changed behaviour of sudo in Natty. Fixes (#748209). Answer
	  questions #151311, #151108, #150223
* Backend:
	* Extract proxy environment variables in uck-gui and pass them on to
	  the chroot environment around sudo calls. Solves (#111253)
	* Modified customize_iso to correctly use REMASTER_HOME if SCRIPT_DIR
	  was not specified.
* Documentation:
	* Fixed uck-gui man page: uck-gui does not accept a customization-dir
	  parameter.

-----------
-- 2.4.3 --
-----------

* Backend:
	* uck-remaster-prepare-alternate and uck-remaster-finalize-alternate now
	  support all architectures (and not only i386)

-----------
-- 2.4.2 --
-----------

* Backend:
	* Added code to remember kernel update state (shared /var/run
	  issue). (#682108)
	* yaboot dep was added (only for ppc)

-----------
-- 2.4.1 --
-----------

* Backend:
	* Applied patch to handle changed named of syslinux config file.
	  Thanks to Tom Freudenberg for this patch. (#681032)

-----------
-- 2.4.0 --
-----------

* GUI:
	* GUI now uses kdialog, zenity, dialog or builtin (in that order) if
	  available. (#577197)
	* Updated uck-gui to accept parameters for loopback/unionfs mounting
	  and added the possibility to specify a directory different from ~/tmp
	  for remaster-dir. Change is backward compatible to uck-2.2.0.
	  (Question/Answer 110374)